# LearningToDraft

./: CMakeLists.txt  README.md  config.py  hero.csv  hero_job.txt.all  rebuild.sh  rebuild_and_train.sh
src/: gamecore.cpp  gamecore.h  learner.py  library.i  mcts.cpp  mcts.h  mcts_pure.cpp  mcts_pure.h  neural_network.py  overall_predictor.py  predict_lib.cpp  predict_lib.h  single_lib.cpp  single_lib.h  thread_pool.h
test/: leaner_test.py  library_test.py  load_pkl.py  result  test1.py  test_model.py
test/models/: best_checkpoint  best_checkpoint.pt  checkpoint  checkpoint.pt  checkpoint.pt.9.4.copy  checkpoint.pt.best_copy  checkpoint.pt.copy  checkpoint_single  checkpoint_single.pt  emb_weight.npy
